--- a/viragon/index.html
+++ b/viragon/index.html
@@ -2,19 +2,19 @@
         <title>Viragon - a mutating mass of angry viral triangles</title>
         <link href="StyleViragon.css" rel="stylesheet" type="text/css">
         <meta content="Ed Kay" name="author">
-        <meta content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move." name="description">
+        <meta content="Blast your way to retro arcade heaven against an endlessly growing viral mass that evolves and adapts to your every move." name="description">
         <meta content="retro, twin stick shooter, PC game, emergent gameplay, top down shooter, retro arcade, virus, viral, low poly, stylized, dino boss, dinoboss" name="keywords">
         <!-- FB -->
         <meta property="og:title" content="Viragon">
         <meta property="og:type" content="website">
         <meta property="og:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
         <meta property="og:url" content="http://www.dinoboss.com/viragon">
-        <meta property="og:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
+        <meta property="og:description" content="Blast your way to retro arcade heaven against an endlessly growing viral mass that evolves and adapts to your every move.">
         <!-- TWITTER -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:url" content="http://www.dinoboss.com/viragon">
         <meta name="twitter:title" content="Viragon">
-        <meta name="twitter:description" content="Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.">
+        <meta name="twitter:description" content="Blast your way to retro arcade heaven against an endlessly growing viral mass that evolves and adapts to your every move.">
         <meta name="twitter:image" content="http://www.dinoboss.com/viragon/Images/LogoAndBackground.jpg">
 
         <!-- Needs updating!!!!
@@ -51,8 +51,8 @@
                           130vw'/>
             </div>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <div class="container">Blast your way to retro arcade heaven against a relentless mutating mass of angry viral triangles that constantly evolves and adapts to your every move.
-            <br>            <br>An experimental twin stick shooter which generates stunning procedural patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at <a href="https://www.pirate-jam.com/pirate-jam-2019" title="Pirate Jam 2019" target="_blank">Pirate Jam 2019</a> as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to generate highly emergent gameplay, and the feeling of a living creature.<br><br>
+            <div class="container">Blast your way to retro arcade heaven against an endlessly growing viral mass that evolves and adapts to your every move.
+            <br>            <br>An experimental twin stick shooter that generates living fractal patterns that will crush you to pulp and probably consume your soul.            <br><br>            <h3>ORIGINS</h3>Viragon was first conceived at <a href="https://www.pirate-jam.com/pirate-jam-2019" title="Pirate Jam 2019" target="_blank">Pirate Jam 2019</a> as an experimental prototype based on the theme of chaos. It's inspired by the kind of artwork created through rule based visualisations such as fractals and game of life. The goal was to try and apply this kind of procedural art to generate highly emergent gameplay, and the feeling of a living creature.<br><br>
             <h3>EVOLUTION</h3>            <p>
               Viragon is constantly evolving.
               <br>
