--- a/demonspore/index.html
+++ b/demonspore/index.html
@@ -56,6 +56,7 @@
               <br>
               <br>
               To keep up to date with progress, please sign up to my newsletter:</p><br>
+            </div>
 
   <!-- Begin Mailchimp Signup Form -->
 
@@ -87,7 +88,7 @@
   <!--End mc_embed_signup-->
 
               <br>
-                      </p></div>
+                      </p>
 
 
               <br>
