attempt to fix form 2

--- a/demonspore/index.html
+++ b/demonspore/index.html
@@ -43,13 +43,7 @@
                         140vw'/>
           </div>
             -->
-            <div class='image-logo'>
-              <img src='images/photo-small.jpg'
-                   srcset='Images/LogoAndBackground_LR.jpg 1264w,
-                           Images/LogoAndBackground_HR.jpg 2528w'
-                   sizes='(min-width: 1264px) 1264px,
-                          130vw'/>
-            </div>
+            <img alt="Demon Spore" src="Images/LogoAndBackground_LR.jpg"></a>
           <br><br><br>
             <div class="container">Blast your way out of a locked down laboratory as a rapidly growing viral organism is spreading out of control. <br><br>
               Enter tentacle hell in this intense action rogue-lite inspired by 80s monster movies where improvisation and strategy are the key to survival against a constantly evolving life form.         <br><br>
