Added conact form and put demonspore on it

--- a/index.html
+++ b/index.html
@@ -35,18 +35,22 @@
           <br><img alt="DinoBoss Logo" src="Images/LogoDinoBoss.png" title="DinoBoss Logo"><br><br><br><br>
 
             <div class="container">
-          <h1>EXTREME VIDEO GAME DEVELOPMENT<img src="Images/WebsiteLineBreak.png"></h1>
+          <h1>EXTREME VIDEO GAME DEVELOPMENT</h1>
+          <img src="Images/WebsiteLineBreak.png">
 <p>
 
   <br>DinoBoss is a video game development studio specialising in visceral, atmospheric and emergent experiences, which sometimes involve throwing goats off mountains.
 <br>
 <br>
-  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br><br></p>
-<h1>CURRENT PROJECTS<img src="Images/WebsiteLineBreak.png"></h1>
+  Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br></p>
+<h1>PROJECTS</h1>
+<img src="Images/WebsiteLineBreak.png">
           <div align="center"> </div>
 <br>The first project lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
-<h1></h1>
-          <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank"><img src="Images/MarkettingImageWithLogo.jpg" alt="Hang Line" onload="this.width/=2;this.onload=null;" title="Hang Line"></a>
+
+<br>
+<iframe src="https://www.youtube.com/embed/0zS_PjkFmss" allowfullscreen="" width="960" height="540" frameborder="0"></iframe>
+<br>
           </div>
 <div class="container"> <br><br>Hang Line is an extreme-physics
             climbing game where you swing up dangerous mountain peaks and avoid
@@ -57,11 +61,23 @@
 <div class="container"><br>
 
 <p>
-          Avaialable now for iPhone®, iPad® and Android®.</p>
+          Avaialable now for free on iPhone®, iPad® and Android®.</p>
 
           <a href="https://itunes.apple.com/us/app/hang-line-mountain-climber/id1372005090" target="_blank"><img src="Images/BadgeDownloadOnTheAppStore.png" alt="Download on App Store" onload="this.width/=2;this.onload=null;"></a><a href="https://play.google.com/store/apps/details?id=com.yodo1.hanglinerescue" target="_blank"><img src="Images/BadgetDownloadOnGooglePlay.png" alt="Download on Google Play" onload="this.width/=2;this.onload=null;"></a>
 
-          <br><br>
+          <br><br><br>
+          <img src="Images/WebsiteLineBreak.png">
+                    <br><br><br><br>
+          The current game in development at DinoBoss is Demon Spore.
+            <br><br>
+                <p>Demon Spore is an intense action rogue-like inspired by 80s Monster movies where you have to blast your way through tentacle hell as a failed lab experiment gives birth to a rapidly growing viral horror.</p>
+                <br>
+
+                <iframe width="960" height="540" src="http://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+                    <p>To find out more you can check out the <a href="..\demonspore\index.html" title="Hang Line" target="_blank">Demon Spore website</a></p>
+                      <br><br>
+
         </div>
 <div class="container">
 <h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
@@ -69,17 +85,19 @@
 <div class="container"><br>A 17 year game design veteran, Ed Kay has been dreaming of making his own game since discovering the Doom level editor in 1996. But after a career of headshots, explosions and special moves spanning Cthulhu to Bulletstorm, it wasn't until having his dreams shattered from the Lucasarts apocalypse that he decided it was time to escape AAA console development and enter the terrifying world of indie development. And thus DinoBoss was born.</div>
 <div class="container"><br>
 <h3>GET IN TOUCH</h3>
-<p>Twitter:</p>
-<a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
-<img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png"></a>
-<br><br>
-<a target="_top" title="Sign up to Newsletter" href="newsletter.html">Sign up to Newsletter<br></a>
-<br>
-<a target="_blank" title="Get in touch" href="http://www.hanglinegame.com/Contact.html">
-  Contact Form<br></a>
-
-
-<br><br><img src="Images/WebsiteLineBreak.png"></div><div class="container"><br><br>
+    <a target="_top" title="Sign up to Newsletter" href="Newsletter.html">Sign up to Newsletter</a>
+    <br><br>
+    <a target="_blank" title="Get in touch" href="ContactForm.html">Send me a message
+    </a>
+  <br><br>
+  <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
+    Follow me on Twitter</a>
+    <br><br>
+    <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
+    <img style="width: 64px; height: 64px;" alt="Ed on twitter" src="Images/twitter-128.png">
+    </a>
+<br><br><br>
+<img src="Images/WebsiteLineBreak.png"></div><div class="container"><br><br>
 <p style="font-size: small;">
 iPhone and iPad are registered trademarks of Apple Inc, registered in the U.S. and other countries. App Store is a service mark of Apple, Inc. Android is a trademark of Google Inc.</p>
 </div>
