link back to main site

--- a/ContactForm.html
+++ b/ContactForm.html
@@ -47,6 +47,10 @@
 
 	</form>
 
+	<br>
+	  <p><a target="_top" title="Back to main website" href="index.html">Back to
+	      main website</a></p>
+	  <br>
 
 </body>
 </html>
