--- a/Newsletter.html
+++ b/Newsletter.html
@@ -21,4 +21,9 @@
 <div class="container">
 <h1><img src="Images/WebsiteLineBreak.png"></h1><br>
 
+<br>
+  <p><a target="_top" title="Back to main website" href="index.html">Back to
+      main website</a></p>
+  <br>
+
 </div></body></html>
