--- a/ContactForm.html
+++ b/ContactForm.html
@@ -24,28 +24,32 @@
 
 	Use the following form to send me a message.</p><br>
 
-
-
-	<form method="post" action="ContactFormSubmit.php">
+	<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSf6z1yJZZ3-aPPU_YbLIUnCfn171lRx6CiT8Gj_cXEjf-0KLg/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 		<br>
-		<p>Your name:
-		<br /><input name="name" /></p>
-
-		<p>Your email:
-		<br /><input name="email" /></p>
-
-		<!-- Important: if you add any fields to this page, you will also need to update the php script -->
-
-		<p class="antispam">Leave this empty:
-		<br /><input name="url" /></p>
-
-		<p>Your message:
-		<br /><textarea name="message" rows="10" cols="50"></textarea></p>
-
-		<p><input type="submit" value="Send" /></p>
+	  Your name:<br>
+	  <input type="text" name="entry.1210582692" id="entry.1210582692">
+		<br><br>
+	  Your email:<br>
+	  <input type="text" name="entry.92797013" id="entry.92797013">
+		<br><br>
+	  Your message:<br>
+	  <textarea type="text" name="entry.653295125" id="entry.653295125" rows="10" cols="50"></textarea>
+		<br><br>
+	  <input type="submit" value="Submit">
 		<br>
-
+		<br>
 	</form>
+
+	<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+
+	<script src="assets/js/jquery.min.js"></script>
+	<script type="text/javascript">var submitted=false;</script>
+	<script type="text/javascript">
+	$('#gform').on('submit', function(e) {
+	  $('#gform *').fadeOut(2000);
+	  $('#gform').prepend('Thanks for getting in touch!');
+	  });
+	</script>
 
 	<br>
 	  <p><a target="_top" title="Back to main website" href="index.html">Back to
