--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                 <iframe width="960" height="540" src="https://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
-                    <p>To find out more you can check out the <a href="..\demonspore\index.html" title="Hang Line" target="_blank">Demon Spore website</a></p>
+                    <p>To find out more you can check out the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
                       <br><br>
 
         </div>
