--- a/index.html
+++ b/index.html
@@ -44,9 +44,22 @@
 <br>
   Instead of using processes, meetings, planning and expert specialists, at DinoBoss games are made by the sheer determination of one man smashing his fists at a keyboard until polygons come raining forth.</p><p><br></p>
 <h1>PROJECTS</h1>
+
 <img src="Images/WebsiteLineBreak.png">
-          <div align="center"> </div>
-<br>The first project lovingly created at DinoBoss is goat grappling action game Hang Line.<br><br>
+          <br><br>
+The current game in development at DinoBoss is Demon Spore.
+  <br><br>
+      <p>Demon Spore is an intense action rogue-like inspired by 80s Monster movies where you have to blast your way through tentacle hell as a failed lab experiment gives birth to a rapidly growing viral horror.</p>
+      <br>
+
+      <iframe width="960" height="540" src="https://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+      </iframe>
+          <p>To find out more you can check out the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
+            <br><br><br>
+
+<img src="Images/WebsiteLineBreak.png">
+
+<br>The first project lovingly created at DinoBoss was goat grappling action game Hang Line.<br><br>
 
 <br>
 <iframe src="https://www.youtube.com/embed/0zS_PjkFmss" allowfullscreen="" width="960" height="540" frameborder="0"></iframe>
@@ -65,19 +78,7 @@
 
           <a href="https://itunes.apple.com/us/app/hang-line-mountain-climber/id1372005090" target="_blank"><img src="Images/BadgeDownloadOnTheAppStore.png" alt="Download on App Store" onload="this.width/=2;this.onload=null;"></a><a href="https://play.google.com/store/apps/details?id=com.yodo1.hanglinerescue" target="_blank"><img src="Images/BadgetDownloadOnGooglePlay.png" alt="Download on Google Play" onload="this.width/=2;this.onload=null;"></a>
 
-          <br><br><br>
-          <img src="Images/WebsiteLineBreak.png">
-                    <br><br><br><br>
-          The current game in development at DinoBoss is Demon Spore.
-            <br><br>
-                <p>Demon Spore is an intense action rogue-like inspired by 80s Monster movies where you have to blast your way through tentacle hell as a failed lab experiment gives birth to a rapidly growing viral horror.</p>
-                <br>
-
-                <iframe width="960" height="540" src="https://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                </iframe>
-                    <p>To find out more you can check out the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
-                      <br><br>
-
+  <br><br>
         </div>
 <div class="container">
 <h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
