--- a/index.html
+++ b/index.html
@@ -47,27 +47,29 @@
 
 <img src="Images/WebsiteLineBreak.png">
           <br><br>
+          <h3>Demon Spore</h3>
 The current game in development at DinoBoss is Demon Spore.
   <br><br>
       <p>Demon Spore is an intense action rogue-like inspired by 80s Monster movies where you have to blast your way through tentacle hell as a failed lab experiment gives birth to a rapidly growing viral horror.</p>
       <br>
 
       <iframe width="960" height="540" src="https://www.youtube.com/embed/n76jqC1rNPI" title="Demon Spore" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-      </iframe>
-          <p>To find out more you can check out the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
-            <br><br><br>
+      </iframe><br><br>
+          <p>Find out more at the <a href="http://www.demonspore.com" title="Hang Line" target="_blank">Demon Spore website</a></p>
+            <br><br>
 
 <img src="Images/WebsiteLineBreak.png">
-
-<br>The first project lovingly created at DinoBoss was goat grappling action game Hang Line.<br><br>
+<br>
+<br>
+<h3>Hang Line</h3>
+The first project lovingly created at DinoBoss was goat grappling action game Hang Line.<br><br>
 
 <br>
 <iframe src="https://www.youtube.com/embed/0zS_PjkFmss" allowfullscreen="" width="960" height="540" frameborder="0"></iframe>
 <br>
           </div>
 <div class="container"> <br><br>Hang Line is an extreme-physics
-            climbing game where you swing up dangerous mountain peaks and avoid
-            ending up in hospital from falling rocks, avalanches and angry
+            climbing game where you swing up dangerous mountain peaks and rescue stranded survivors from falling rocks, avalanches and angry
             goats.</div>
 <div class="container"><br></div>
 <div class="container">Check it out at <a href="http://www.hanglinegame.com/index.html" title="Hang Line" target="_blank">www.hanglinegame.com</a>.</div>
@@ -78,7 +80,7 @@ The current game in development at DinoBoss is Demon Spore.
 
           <a href="https://itunes.apple.com/us/app/hang-line-mountain-climber/id1372005090" target="_blank"><img src="Images/BadgeDownloadOnTheAppStore.png" alt="Download on App Store" onload="this.width/=2;this.onload=null;"></a><a href="https://play.google.com/store/apps/details?id=com.yodo1.hanglinerescue" target="_blank"><img src="Images/BadgetDownloadOnGooglePlay.png" alt="Download on Google Play" onload="this.width/=2;this.onload=null;"></a>
 
-  <br><br>
+  <br><br><br>
         </div>
 <div class="container">
 <h1>WHO DINOBOSS IS<img src="Images/WebsiteLineBreak.png"></h1>
