--- a/Newsletter.html
+++ b/Newsletter.html
@@ -14,7 +14,52 @@
             <div class="container">
           <h1>NEWSLETTER<img src="Images/WebsiteLineBreak.png"></h1>
 <p>
-  To receive an occasion exciting update on whatever I'm working on, feel free to sign up to the newsletter.</p><br>  <!-- Begin Mailchimp Signup Form -->  <div id="mc_embed_signup">  <form action="https://dinoboss.us16.list-manage.com/subscribe/post?u=8008d6262eef4eecd59838cea&amp;id=288cf5fe1c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>      <div id="mc_embed_signup_scroll">  	<br>    <div class="mc-field-group">    	<label for="mce-NAME">Name </label>    	<input type="text" value="" name="NAME" class="required" id="mce-NAME">    </div>  <br>  <div class="mc-field-group">    <label for="mce-EMAIL">Email </label>    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">  </div>      <br>      	<div id="mce-responses" class="clear">      		<div class="response" id="mce-error-response" style="display:none"></div>      		<div class="response" id="mce-success-response" style="display:none"></div>      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_8008d6262eef4eecd59838cea_288cf5fe1c" tabindex="-1" value=""></div>          <div class="clear"><input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>          </div>      <br>  </form>  </div>  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='NAME';ftypes[1]='text';fnames[3]='BIRTHDAY';ftypes[3]='birthday';fnames[2]='MMERGE2';ftypes[2]='text';fnames[4]='MMERGE4';ftypes[4]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>  <!--End mc_embed_signup-->
+  To receive an occasion exciting update on whatever I'm working on, feel free to sign up to the newsletter.</p><br>
+  <!-- Begin Mailchimp Signup Form -->
+  <div id="mc_embed_signup">
+    <form action="https://dinoboss.us16.list-manage.com/subscribe/post?u=8008d6262eef4eecd59838cea&amp;id=288cf5fe1c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+        <br>
+    <div class="mc-field-group">
+      <label for="mce-NAME">Name </label>
+      <input type="text" value="" name="NAME" class="required" id="mce-NAME">
+    </div>  <br>
+    <div class="mc-field-group">
+      <label for="mce-EMAIL">Email </label>
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">  
+    </div>      <br>
+    <div id="mce-responses" class="clear">
+      <div class="response" id="mce-error-response" style="display:none">
+      </div>
+      <div class="response" id="mce-success-response" style="display:none">
+      </div>
+    </div>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+      <input type="text" name="b_8008d6262eef4eecd59838cea_288cf5fe1c" tabindex="-1" value="">
+    </div>
+    <div class="clear">
+      <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
+    </div>
+  </div>
+  <br>
+</form>
+</div>
+  <script type='text/javascript' src='javascript/mc-validate.js'>
+  </script>
+  <script type='text/javascript'>
+  (function($)
+    {
+      window.fnames = new Array();
+      window.ftypes = new Array();
+      fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='NAME';ftypes[1]='text';fnames[3]='BIRTHDAY';
+      ftypes[3]='birthday';fnames[2]='MMERGE2';ftypes[2]='text';fnames[4]='MMERGE4';ftypes[4]='text';
+    }
+      (jQuery));
+      var $mcj = jQuery.noConflict(true);
+    </script>
+
+    <!--End mc_embed_signup-->
 
 <br>
         </p></div>
