--- a/ContactForm.html
+++ b/ContactForm.html
@@ -45,8 +45,18 @@
 	  <input type="text" name="entry.92797013" id="entry.92797013" placeholder="you@yourdomain.com" class="text" type="text">
 		<br><br>
 	  Your message:<br>
-	  <textarea type="text" name="entry.653295125" id="entry.653295125" rows="10" cols="50"
-		maxlength="1000" placeholder="Your exciting message" class="text" type="text"></textarea>
+
+	  <textarea type="text"
+			name="entry.653295125"
+			id="entry.653295125"
+			rows="12"
+			style="position: relative; width: 90%;"
+			maxlength="1000"
+			placeholder="Your exciting message"
+			class="text"
+			type="text">
+		</textarea>
+
 		<br><br>
 	  <input type="submit" value="Submit" name="SubmitButton">
 		<br>
