--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ The first project lovingly created at DinoBoss was goat grappling action game Ha
 <h3>GET IN TOUCH</h3>
     <a target="_top" title="Sign up to Newsletter" href="Newsletter.html">Sign up to Newsletter</a>
     <br><br>
-    <a target="_blank" title="Get in touch" href="ContactForm.html">Send me a message
+    <a target="_top" title="Get in touch" href="ContactForm.html">Send me a message
     </a>
   <br><br>
   <a target="_blank" title="Ed on Twitter" href="https://twitter.com/edform">
