Reducing number of h1s

--- a/Newsletter.html
+++ b/Newsletter.html
@@ -14,7 +14,7 @@
             <div class="container">
           <h1>NEWSLETTER<img src="Images/WebsiteLineBreak.png"></h1>
 <p>
-  To receive an occasion exciting update on whatever I'm working on, feel free to sign up to the newsletter.</p><br>
+  To receive an occasional exciting update on whatever I'm working on, feel free to sign up to the newsletter.</p><br>
   <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
     <form action="https://dinoboss.us16.list-manage.com/subscribe/post?u=8008d6262eef4eecd59838cea&amp;id=288cf5fe1c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -26,7 +26,7 @@
     </div>  <br>
     <div class="mc-field-group">
       <label for="mce-EMAIL">Email </label>
-      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">  
+      <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
     </div>      <br>
     <div id="mce-responses" class="clear">
       <div class="response" id="mce-error-response" style="display:none">
@@ -64,7 +64,7 @@
 <br>
         </p></div>
 <div class="container">
-<h1><img src="Images/WebsiteLineBreak.png"></h1><br>
+<img src="Images/WebsiteLineBreak.png"><br>
 
 <br>
   <p><a target="_top" title="Back to main website" href="index.html">Back to
